# cnc-msldriver

can_connection/include/: Can.h  canconnection.h  canlistener.h  udpcanconnection.h  usbcanconnection.h
can_connection/src/: udpcanconnection.cpp  usbcanconnection.cpp
carpet_calibrator/include/: CarpetCalibratorNodelet.h  FilterLinePointsCalib.h
carpet_calibrator/src/: CarpetCalibrator.cpp  CarpetCalibratorNodelet.cpp  FilterLinePointsCalib.cpp  FilterLinePointsNode.cpp
laser_scan_localization/: CMakeLists.txt  package.xml
laser_scan_localization/include/: LaserScan.h
laser_scan_localization/msg/: LaserLocalization.msg
laser_scan_localization/src/: LaserScan.cpp  Listener.cpp  Main.cpp  Talker.cpp
msl_actuation_control/src/: ActuationControl.cpp
msl_astra_pro_driver/OpenNI-Linux-x64-2.2/Include/: OniCAPI.h  OniCEnums.h  OpenNI.h  PSLink.h
msl_astra_pro_driver/src/: msl_astra_pro_driver_node.cpp
msl_color_calibrator/: CMakeLists.txt  package.xml
msl_color_calibrator/include/ColorCalibrator/: CameraSettingsDialog.h  Command.h  PolygonQGraphicsScene.h  ROSCommunicator.h  mainwindow.h
msl_color_calibrator/src/: CameraSettingsDialog.cpp  Command.cpp  PolygonQGraphicsScene.cpp  ROSCommunicator.cpp  mainwindow.cpp
msl_depth_perception/: CMakeLists.txt  package.xml
msl_directed_depth_vision/: CMakeLists.txt
msl_directed_depth_vision/OpenNI-Linux-x64-2.2/Include/: OniEnums.h  OniVersion.h  PS1080.h
msl_directed_depth_vision/include/: Cluster.h  ClusterTracker.h  DepthVision.h  DirectedDepthVisionNodelet.h  FloorCalibrator.h
msl_directed_depth_vision/src/: Cluster.cpp  ClusterTracker.cpp  DepthVision.cpp  DirectedDepthVisionNode.cpp  DirectedDepthVisionNodelet.cpp  FloorCalibrator.cpp
msl_flying_ball_detection/OpenNI-Linux-x64-2.2/Include/: OniCProperties.h  OniCTypes.h  OniPlatform.h  OniProperties.h  PrimeSense.h
msl_flying_ball_detection/include/: FrameListener.h  InformationElement.h  RingBuffer.h
msl_flying_ball_detection/src/: FlyingBallDetection.cpp  FrameListener.cpp
msl_goal_detection/include/: LaserScanListener.h
msl_goal_detection/src/: LaserScanListener.cpp
msl_goalie_kicker/: CMakeLists.txt  package.xml
msl_goalie_kicker/include/: Kicker.h
msl_goalie_kicker/src/: Kicker.cpp
msl_kick_control/: CMakeLists.txt  package.xml
msl_kick_control/include/: Kicker.h
msl_kick_control/src/: Kicker.cpp
msl_localization/: CMakeLists.txt  package.xml
msl_localization/include/: EgoMotionEstimator.h  MapHelper.h  RandomHelper.h  RosMsgReceiver.h  Rprop.h  msl_localization.h
msl_localization/src/: CNLocalization.cpp  EgoMotionEstimator.cpp  MapHelper.cpp  RandomHelper.cpp  RosMsgReceiver.cpp  Rprop.cpp  msl_localization.cpp
msl_motion/: CMakeLists.txt  package.xml
msl_motion/include/: MCDC.h  MCDCProtocol.h  RosHelper.h  gonzales.h  settings.h
msl_motion/include/driver/: controller.h  eposcan.h  eposprotocol.h  eposusb.h
msl_motion/src/: EposGonzales.cpp  RosHelper.cpp  epostest.cpp  gonzales.cpp  logging.cpp  settings.cpp
msl_motion/src/driver/: controller.cpp  eposcan.cpp  eposusb.cpp
msl_motion_calib/: CMakeLists.txt  package.xml
msl_motion_calib/include/: RosHelperCalib.h
msl_motion_calib/src/: CalibDrive.cpp  RosHelperCalib.cpp
msl_pcl_filters/include/msl_pcl_filters/: FilterVoxelGrid.h
msl_pcl_filters/src/: FilterVoxelGrid.cpp
msl_tmc_motion/: CMakeLists.txt  package.xml
msl_tmc_motion/include/: CNMCPacket.h  CircleTrace.h  DriverData.h  Motion.h  MotionData.h  MotorConfig.h  StatusCode.h
msl_tmc_motion/src/: CNMCPacket.cpp  CircleTrace.cpp  Motion.cpp
msl_vision/: CMakeLists.txt  package.xml
msl_vision/src/: CameraModelTest.cpp  CameraQuickCam.cpp  CameraQuickCam.h  ImageHandler.cpp  ImageHandler.h  VisionImageConverter.cpp  VisionPlayer.cpp  VisionPlayer3D.cpp  VisionPlayerCalib.cpp  VisionPlayerGoalie.cpp  VisionPlayerGoalie1394.cpp  VisionPlayerKinect.cpp  XVDisplay.cpp  XVDisplay.h
msl_vision/src/camControl/: BasisAutoParam.cpp  BasisAutoParam.h  BasisControl.cpp  BasisControl.h  Brightness.cpp  Brightness.h  GainControl.cpp  GainControl.h  PControl.cpp  PControl.h  ReferenceArea.cpp  ReferenceArea.h  Whitepoint.cpp  Whitepoint.h
msl_vision/src/driver/: CameraQuickCam.cpp  CameraQuickCam.h  dc1394camera.cpp  dc1394camera.h  flea2.cpp  flea2.h  frame.h  guppy.cpp  guppy.h  imagingsource.cpp  imagingsource.h  marlin.cpp  marlin.h  pike.cpp  pike.h  ps3eye.cpp  ps3eye.h  sony.cpp  sony.h
msl_vision/src/fann/: createUVDiagram.cpp
msl_vision/src/filters/: Filter.cpp  Filter.h  FilterAdaptiveROI.cpp  FilterAdaptiveROI.h  FilterAdaptiveROIDirected.cpp  FilterAdaptiveROIDirected.h  FilterAddBallBlobsToSeg.cpp  FilterAddBallBlobsToSeg.h  FilterAdjustGain.cpp  FilterAdjustGain.h  FilterAdjustGainDirected.cpp  FilterAdjustGainDirected.h  FilterAdjustGainNew.cpp  FilterAdjustGainNew.h  FilterAutoSeg.cpp  FilterAutoSeg.h  FilterBox.cpp  FilterBox.h  FilterCalibrationDirected.cpp  FilterCalibrationDirected.h  FilterCircleMask.cpp  FilterCircleMask.h  FilterDistanceProfile.cpp  FilterDistanceProfile.h  FilterDistanceProfileNew.cpp  FilterDistanceProfileNew.h  FilterDrawScanLines.cpp  FilterDrawScanLines.h  FilterExtractBlobs.cpp  FilterExtractBlobs.h  FilterExtractBlobsDirected.cpp  FilterExtractBlobsDirected.h  FilterExtractImages.cpp  FilterExtractImages.hpp  FilterExtractLineImage.cpp  FilterExtractLineImage.hpp  FilterExtractPanno.cpp  FilterExtractPanno.hpp  FilterGrayToDarkSeg.cpp  FilterGrayToDarkSeg.h  (+49 more)
msl_vision/src/global/: Packets.h  Types.h
msl_vision/src/helpers/: BallClusterHelp.cpp  BallClusterHelp.h  BallHelper.cpp  BallHelper.h  BallHelperDirected2.cpp  BallHelperDirected2.h  BallHelperDirectedGoalie.cpp  BallHelperDirectedGoalie.h  BallHelperKinect.cpp  BallHelperKinect.h  (+102 more)
rt_imu_lib_test/include/: RTFusion.h  RTFusionKalman4.h  RTFusionRTQF.h  RTIMUAccelCal.h  RTIMUCalDefs.h  RTIMUHal.h  RTIMULib.h  RTIMULibDefs.h  RTIMUMagCal.h  RTMath.h
rt_imu_lib_test/src/: RTFusionKalman4.cpp  RTIMULibCal.cpp  RTIMULibSpeed.cpp
usb_can_proxy/src/: UsbCanConsole.cpp  UsbCanProxy.cpp
(+56 files in other folders)
