<?xml version="1.0"?>
<package>
  <name>msl_color_calibrator</name>
  <version>0.0.0</version>
  <description>The msl_color_calibrator package</description>

  <maintainer email="witsch@vs.uni-kassel.de">Andreas Witsch</maintainer>

  <license>BSD</license>

  <author email="sperber@uni-kassel.de">Philipp Sperber</author>


  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>roscpp</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>system_config</build_depend>

  <build_depend>msl_vision</build_depend>
  <build_depend>msl_sensor_msgs</build_depend>
  <build_depend>agent_id</build_depend>
  <build_depend>msl_robot_id</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>msl_robot_id</run_depend>
  <run_depend>agent_id</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>system_config</run_depend>
  <run_depend>msl_vision</run_depend>
  <run_depend>msl_sensor_msgs</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
